[package]
name = "fuzz"
version = "0.1.0"
authors = ["Seb Glazebrook <sebastian.glazebrook@redbubble.com>"]

[dependencies]

ncurses = "*"
crossbeam = "*"
clipboard = "*"
log = "*"
env_logger = "*"


[dependencies.directory_filter]
git = "http://github.com/sebglazebrook/directory_filter.git"
rev = "14ad2d9"

# [dependencies.clipboard]
# git = "https://github.com/aweinstock314/rust-clipboard.git"
